test/log/conversion/vtrunc_w_u32_m.txt
vtrunc_w_u32_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vtrunc_w_u32_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vtrunc_w_u32_m.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vtrunc_w_u32_m.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vtrunc_w_u32_m.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vtrunc_w_u32_m.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vtrunc_w_u32_m.c:22:6: warning: no previous prototype for 'vtrunc_w_u32_m_golden' [-Wmissing-prototypes]
   22 | void vtrunc_w_u32_m_golden(bool16_t mask,uint32_t *maskoff,uint64_t *a,uint32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~
vtrunc_w_u32_m.c: In function 'vtrunc_w_u32_m_golden':
vtrunc_w_u32_m.c:24:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   24 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vtrunc_w_u32_m.c:24:1: note: each undeclared identifier is reported only once for each function it appears in
vtrunc_w_u32_m.c:24:9: error: expected ';' before 'Line'
   24 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vtrunc_w_u32_m.c:22:37: warning: unused parameter 'mask' [-Wunused-parameter]
   22 | void vtrunc_w_u32_m_golden(bool16_t mask,uint32_t *maskoff,uint64_t *a,uint32_t *exp_result) {
      |                            ~~~~~~~~~^~~~
vtrunc_w_u32_m.c:22:52: warning: unused parameter 'maskoff' [-Wunused-parameter]
   22 | void vtrunc_w_u32_m_golden(bool16_t mask,uint32_t *maskoff,uint64_t *a,uint32_t *exp_result) {
      |                                          ~~~~~~~~~~^~~~~~~
vtrunc_w_u32_m.c:22:70: warning: unused parameter 'a' [-Wunused-parameter]
   22 | void vtrunc_w_u32_m_golden(bool16_t mask,uint32_t *maskoff,uint64_t *a,uint32_t *exp_result) {
      |                                                            ~~~~~~~~~~^
vtrunc_w_u32_m.c:22:82: warning: unused parameter 'exp_result' [-Wunused-parameter]
   22 | void vtrunc_w_u32_m_golden(bool16_t mask,uint32_t *maskoff,uint64_t *a,uint32_t *exp_result) {
      |                                                                        ~~~~~~~~~~^~~~~~~~~~
vtrunc_w_u32_m.c: In function 'main':
vtrunc_w_u32_m.c:40:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   40 |     data_init_bool(mask, exp_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vtrunc_w_u32_m.c:15:15: error: subscripted value is neither array nor pointer nor vector
   15 |              a[i] = random(threshold); \
      |               ^
vtrunc_w_u32_m.c:42:5: note: in expansion of macro 'data_init'
   42 |     data_init(a, exp_a, 8*2, 0xffffffffffffffff);
      |     ^~~~~~~~~
vtrunc_w_u32_m.c:16:22: error: subscripted value is neither array nor pointer nor vector
   16 |              b[i] = a[i]; \
      |                      ^
vtrunc_w_u32_m.c:42:5: note: in expansion of macro 'data_init'
   42 |     data_init(a, exp_a, 8*2, 0xffffffffffffffff);
      |     ^~~~~~~~~
vtrunc_w_u32_m.c:45:27: error: incompatible type for argument 1 of 'vtrunc_w_u32_m_golden'
   45 |     vtrunc_w_u32_m_golden(exp_mask,exp_maskoff,exp_a,exp_result);
      |                           ^~~~~~~~
      |                           |
      |                           uint64_t * {aka long long unsigned int *}
vtrunc_w_u32_m.c:22:37: note: expected 'bool16_t' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   22 | void vtrunc_w_u32_m_golden(bool16_t mask,uint32_t *maskoff,uint64_t *a,uint32_t *exp_result) {
      |                            ~~~~~~~~~^~~~
vtrunc_w_u32_m.c:53:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
   53 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     uint32_t {aka long unsigned int}
      |                                                               %lx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vtrunc_w_u32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vtrunc_w_u32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vtrunc_w_u32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vtrunc_w_u32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed